tests/ui/const-generics/mgca/free-const-recursive.stderr
error[E0271]: type mismatch resolving `A normalizes-to _`
  --> $DIR/free-const-recursive.rs:7:1
   |
LL | type const A: () = A;
   | ^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `A normalizes-to _`
  --> $DIR/free-const-recursive.rs:7:1
   |
LL | type const A: () = A;
   | ^^^^^^^^^^^^^^^^ types differ
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
